--- a/client/pages/viewings/Viewings.html
+++ b/client/pages/viewings/Viewings.html
@@ -8,50 +8,77 @@
     {{#if $.Session.get 'updateViewing'}}
       {{> UpdateViewing viewing=viewing}}
     {{else}}
-      <p>
-        <table>
-          <tr>
-            <th>Participant:</th>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary participant previous"><i class="fa fa-chevron-left"></i></button>
-            </td>
-            <td class="p-l-10 text-center">
-              <a href="/studies/{{study._id}}/participants/{{participant._id}}">{{participant.name}}</a>
-            </td>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary participant next"><i class="fa fa-chevron-right"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th>Stimulus:</th>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary stimulus previous"><i class="fa fa-chevron-left"></i></button>
-            </td>
-            <td class="p-l-10 text-center">
-              <a href="/studies/{{study._id}}/stimuli/{{stimulus._id}}">{{stimulus.name}}</a>
-            </td>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary stimulus next"><i class="fa fa-chevron-right"></i></button>
-            </td>
-          </tr>
-          <tr>
-            <th>Viewing Number:</th>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary number previous"><i class="fa fa-chevron-left"></i></button>
-            </td>
-            <td class="p-l-10 text-center">
-              {{number}} of {{viewingCount}}
-            </td>
-            <td class="p-l-10 p-t-5 p-b-5">
-              <button class="btn btn-primary number next"><i class="fa fa-chevron-right"></i></button>
-            </td>
-          </tr>
-        </table>
-      </p>
+      <div class="row">
+        <div class="col-md-6 m-b-20">
+          <table>
+            <tr>
+              <th>Participant:</th>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary participant previous"><i class="fa fa-chevron-left"></i></button>
+              </td>
+              <td class="p-l-10 text-center">
+                <a href="/studies/{{study._id}}/participants/{{participant._id}}">{{participant.name}}</a>
+              </td>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary participant next"><i class="fa fa-chevron-right"></i></button>
+              </td>
+            </tr>
+            <tr>
+              <th>Stimulus:</th>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary stimulus previous"><i class="fa fa-chevron-left"></i></button>
+              </td>
+              <td class="p-l-10 text-center">
+                <a href="/studies/{{study._id}}/stimuli/{{stimulus._id}}">{{stimulus.name}}</a>
+              </td>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary stimulus next"><i class="fa fa-chevron-right"></i></button>
+              </td>
+            </tr>
+            <tr>
+              <th>Viewing Number:</th>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary number previous"><i class="fa fa-chevron-left"></i></button>
+              </td>
+              <td class="p-l-10 text-center">
+                {{number}} of {{viewingCount}}
+              </td>
+              <td class="p-l-10 p-t-5 p-b-5">
+                <button class="btn btn-primary number next"><i class="fa fa-chevron-right"></i></button>
+              </td>
+            </tr>
+          </table>
+        </div>
 
-      <form class="m-t-20">
+        <div class="col-md-6">
+          <div class="well m-b-20">
+            <table>
+              <tr>
+                <th>Duration:</th>
+                <td class="p-l-10" colspan="2">{{millisecondsToMSMS viewing.duration}}</td>
+              </tr>
+              <tr>
+                <th>Start Time - End Time:</th>
+                <td class="p-l-10" colspan="2">{{millisecondsToMSMS viewing.startTime}} - {{millisecondsToMSMS viewing.endTime}}</td>
+              </tr>
+              <tr>
+                <th>Gaze Point Count (Frequency):</th>
+                <td class="p-l-10">{{viewing.gazepointCount}}</td>
+                <td>({{formatNumber viewing.gazepointFrequency}}/sec)</td>
+              </tr>
+              <tr>
+                <th>Fixation Count (Frequency):</th>
+                <td class="p-l-10">{{viewing.gazepointCount}}</td>
+                <td>({{formatNumber viewing.fixationFrequency}}/sec)</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <form>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-6">
             <div id="periodGroup" class="form-group">
               <label for="period">Period
                 <a href="">
@@ -61,7 +88,7 @@
               <input class="form-control reactive" type="number" placeholder="Period" id="period" value="{{period}}">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-6">
             <div id="timestepGroup" class="form-group">
               <label for="timestep">Time Step
                 <a href="">
@@ -71,7 +98,7 @@
               <input class="form-control reactive" type="number" placeholder="Time Step" id="timestep" value="{{timestep}}">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-6">
             <div id="pointTrailLengthGroup" class="form-group">
               <label for="pointTrailLength">Point Trail Length
                 <a href="">
@@ -81,7 +108,7 @@
               <input class="form-control reactive" type="number" placeholder="Point Trail Length" id="pointTrailLength" value="{{pointTrailLength}}">
             </div>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-xs-6">
             <div id="includeIncompleteGroup" class="form-group">
               <label for="includeIncomplete">Include Incomplete Hulls?</label>
               <a href="">
