calculate frames in real-time, no fixation trail yet, timesteps are not calculating correctly

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -1,6 +1,6 @@
 <template name="Viewing">
   {{#if viewing}}
-    {{> ViewingAnimation viewing=viewing}}
+    {{> ViewingAnimation viewing=viewing hullParams=hullParams}}
   {{else}}
     <div class="m-t-100">
       {{> Spinner}}
