--- a/client/pages/viewings/Viewings.html
+++ b/client/pages/viewings/Viewings.html
@@ -73,7 +73,56 @@
     </div>
 
     {{#if viewing}}
-      {{> Viewing viewingId=viewing._id period=period timestep=timestep includeIncomplete=includeIncomplete pointTrailLength=pointTrailLength}}
+      <form>
+        <div class="row">
+          <div class="col-md-3 col-xs-6">
+            <div id="periodGroup" class="form-group">
+              <label for="period">Period
+                <a href="">
+                  <span class="glyphicon glyphicon-question-sign"></span>
+                </a>
+              </label>
+              <input class="form-control reactive" type="number" placeholder="Period" id="period" value="{{period}}">
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <div id="timestepGroup" class="form-group">
+              <label for="timestep">Time Step
+                <a href="">
+                  <span class="glyphicon glyphicon-question-sign"></span>
+                </a>
+              </label>
+              <input class="form-control reactive" type="number" placeholder="Time Step" id="timestep" value="{{timestep}}">
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <div id="pointTrailLengthGroup" class="form-group">
+              <label for="pointTrailLength">Point Trail Length
+                <a href="">
+                  <span class="glyphicon glyphicon-question-sign"></span>
+                </a>
+              </label>
+              <input class="form-control reactive" type="number" placeholder="Point Trail Length" id="pointTrailLength" value="{{pointTrailLength}}">
+            </div>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <div id="includeIncompleteGroup" class="form-group">
+              <label for="includeIncomplete">Include Incomplete Hulls?</label>
+              <a href="">
+                <span class="glyphicon glyphicon-question-sign"></span>
+              </a>
+              <div>
+                {{#if includeIncomplete}}
+                  <input type="checkbox" checked data-toggle="toggle" class="bootstrap-toggle reactive" id="includeIncomplete"> Yes
+                {{else}}
+                  <input type="checkbox" data-toggle="toggle" class="bootstrap-toggle reactive" id="includeIncomplete"> Yes
+                {{/if}}
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+      {{> Viewing viewingId=viewing._id hullParams=hullParams}}
     {{/if}}
   {{else}}
     {{> Spinner}}
