try to setup coverage

--- a/client/pages/viewings/ViewingAnimation.html
+++ b/client/pages/viewings/ViewingAnimation.html
@@ -2,7 +2,7 @@
   {{#if viewing}}
     {{#if hullseries}}
       <h4>
-        <span class="btn btn-success download-data-as-csv"><i class="fa fa-download"></i>&nbsp;Download Animation Data as .CSV</span>
+        <span class="btn btn-success download-as-csv"><i class="fa fa-download"></i>&nbsp;Download Animation Data as .CSV</span>
       </h4>
       {{> Animation layout=layout initialTraces=initialTraces frameSeries=hullseries}}
     {{else}}
