--- a/client/pages/exports/Exports.html
+++ b/client/pages/exports/Exports.html
@@ -6,30 +6,66 @@
           <label for="exportType">Export Type</label>
           <select class="form-control export-type" id="exportType">
             <option disabled selected>Select...</option>
-            <option disabled value="allAnalysesSingle">All Analyses in Study - Single File</option>
-            <option disabled vlaue="allAnalysesIndividual">All Analyses in Study - Individual Files</option>
-            <option value="allParticipantsSingle">All Participants in Analysis - Single File</option>
-            <option value="allParticipantsIndividual">All Participants in Analysis - Individual Files</option>
-            <option value="allViewingsSingle">All Viewings in Analysis (Convex Hull Data) - Single File</option>
-            <option value="allViewingsIndividual">All Viewings in Analysis (Convex Hull Data) - Individual Files</option>
-            <option disabled value="singleViewing">Single Viewing (Convex Hull Data)</option>
+            <option disabled value="allAnalysesSingle"
+              >All Analyses in Study - Single File</option
+            >
+            <option disabled vlaue="allAnalysesIndividual"
+              >All Analyses in Study - Individual Files</option
+            >
+            <option disabled value="allParticipantsSingle"
+              >All Participants in Analysis - Single File</option
+            >
+            <option disabled value="allParticipantsIndividual"
+              >All Participants in Analysis - Individual Files</option
+            >
+            <option value="allViewingsSingle"
+              >All Viewings in Analysis (Convex Hull Data) - Single File</option
+            >
+            <option value="allViewingsIndividual"
+              >All Viewings in Analysis (Convex Hull Data) - Individual
+              Files</option
+            >
+            <option disabled value="singleViewing"
+              >Single Viewing (Convex Hull Data)</option
+            >
           </select>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         {{#if analysisSelectorVisible}}
-          {{> AnalysisSelector}}
+        {{> AnalysisSelector}}
         {{/if}}
       </div>
+      {{#if samplingRateVisible}}
+      <div class="col-xs-4 col-md-2">
+        <div class="form-group">
+          <label for="samplingRate" class="control-label">Sampling Rate</label>
+          <div class="input-group">
+            <input
+              type="number"
+              min="0"
+              max="100"
+              class="form-control sampling-rate"
+              placeholder="Sampling Rate (%)"
+              value="{{ samplingRate }}"
+            />
+            <span class="input-group-addon">%</span>
+          </div>
+          <span class="help-block"></span>
+        </div>
+      </div>
+      {{/if}}
     </div>
     {{#if Template.subscriptionsReady}}
-      {{#if downloadButtonVisible}}
-        <div>
-          <button class="btn btn-primary download-button"><i class="fa fa-download"></i> Download .CSV File(s)</button>
-        </div>
-      {{/if}}
+    {{#if downloadButtonVisible}}
+    <div>
+      <button class="btn btn-primary download-button">
+        <i class="fa fa-download"></i> Download .CSV File(s)
+      </button>
+    </div>
+    {{/if}}
     {{else}}
-      {{> Spinner}}
+    {{> Spinner}}
     {{/if}}
   </div>
 </template>
