--- a/client/pages/exports/Exports.html
+++ b/client/pages/exports/Exports.html
@@ -12,7 +12,7 @@
             <option disabled vlaue="allAnalysesIndividual"
               >All Analyses in Study - Individual Files</option
             >
-            <option disabled value="allParticipantsSingle"
+            <option value="allParticipantsSingle"
               >All Participants in Analysis - Single File</option
             >
             <option disabled value="allParticipantsIndividual"
