working on exports

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -1,6 +1,9 @@
 <template name="Viewing">
   {{#if viewing}}
   {{> ViewingAnimation viewing=viewing hullParams=hullParams}}
+  <div class="m-t-20">
+    {{> ExportAnimation viewing=viewing hullParams=hullParams}}
+  </div>
   {{else}}
   <div class="m-t-100">
     {{> Spinner}}
