--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -11,16 +11,16 @@
             <option disabled selected>Select...</option>
             <optgroup label="Convex Hull Details">
               <option value="detailsCurrent">Current Viewing</option>
-              <option value="detailsAllSingle"
+              <option disabled value="detailsAllSingle"
                 >All Viewings in Analysis - Single File</option
               >
-              <option value="detailsAllIndividual"
+              <option disabled value="detailsAllIndividual"
                 >All Viewings in Analysis - Individual Files</option
               >
             </optgroup>
             <optgroup label="Convex Hull Summary">
-              <option value="summaryCoverage"
-                >Coverage with Participant Variables</option
+              <option disabled value="summaryStats"
+                >Summary Stats with Participant Variables</option
               >
             </optgroup>
           </select>
