--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -26,10 +26,13 @@
           </select>
         </div>
       </div>
-      {{#if samplingRateVisible}}
+      {{#if samplingStepVisible}}
         <div class="col-xs-4 col-md-2">
           <div class="form-group">
-            <label for="samplingRate" class="control-label">Sampling Rate</label>
+            <label for="samplingStep" class="control-label">Sampling Step
+            <a href="">
+              <span class="glyphicon glyphicon-question-sign"></span>
+            </a></label>
             <div class="input-group">
               <input
                 type="number"
@@ -37,7 +40,7 @@
                 max="100"
                 class="form-control sampling-rate"
                 placeholder="Sampling Rate (%)"
-                value="{{ samplingRate }}"
+                value="{{ samplingStep }}"
               />
               <span class="input-group-addon">%</span>
             </div>
