working viewing export

--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -14,7 +14,7 @@
               <option disabled value="detailsAllSingle"
                 >All Viewings in Analysis - Single File</option
               >
-              <option disabled value="detailsAllIndividual"
+              <option value="detailsAllIndividual"
                 >All Viewings in Analysis - Individual Files</option
               >
             </optgroup>
