--- a/client/pages/viewings/Viewings.html
+++ b/client/pages/viewings/Viewings.html
@@ -105,7 +105,7 @@
             </a>
           </label>
           <input
-            class="form-control reactive"
+            class="form-control reactive period"
             type="number"
             placeholder="Period"
             id="period"
@@ -122,7 +122,7 @@
             </a>
           </label>
           <input
-            class="form-control reactive"
+            class="form-control reactive timestep"
             type="number"
             placeholder="Time Step"
             id="timestep"
@@ -139,7 +139,7 @@
             </a>
           </label>
           <input
-            class="form-control reactive"
+            class="form-control reactive pointTrailLength"
             type="number"
             placeholder="Point Trail Length"
             id="pointTrailLength"
@@ -159,7 +159,7 @@
               type="checkbox"
               checked
               data-toggle="toggle"
-              class="bootstrap-toggle reactive"
+              class="bootstrap-toggle reactive includeIncomplete"
               id="includeIncomplete"
             />
             Yes
@@ -167,7 +167,7 @@
             <input
               type="checkbox"
               data-toggle="toggle"
-              class="bootstrap-toggle reactive"
+              class="bootstrap-toggle reactive includeIncomplete"
               id="includeIncomplete"
             />
             Yes
