--- a/client/pages/viewings/ExportAnimation.html
+++ b/client/pages/viewings/ExportAnimation.html
@@ -14,7 +14,7 @@
               <option disabled value="detailsAllSingle"
                 >All Viewings in Analysis - Single File</option
               >
-              <option value="detailsAllIndividual"
+              <option disabled value="detailsAllIndividual"
                 >All Viewings in Analysis - Individual Files</option
               >
             </optgroup>
@@ -51,9 +51,16 @@
     </div>
     {{#if downloadButtonVisible}}
       <div>
-        <button class="btn btn-primary download-button">
-          <i class="fa fa-download"></i> Download .CSV File(s)
-        </button>
+        {{#if downloadButtonDisabled}}
+          <button class="btn btn-primary download-button" disabled>
+            <i class="fa fa-download"></i> Download .CSV File(s)
+            <i class="fa fa-spinner fa-spin"></i>
+          </button>
+        {{else}}
+          <button class="btn btn-primary download-button">
+            <i class="fa fa-download"></i> Download .CSV File(s)
+          </button>
+        {{/if}}
       
         {{#if metricsButtonVisible}}
           <button class="btn btn-default metrics-button m-l-10">
